# axum-pt

./: .env  Cargo.toml  README.md  application.yaml
src/: Latency.rs  app.rs  common.rs  database.rs  error.rs  json.rs  logger.rs  main.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  valid.rs  validation.rs
src/api/: auth.rs  mod.rs  user.rs
src/app/: Latency.rs  auth.rs  common.rs  database.rs  enumeration.rs  error.rs  id.rs  json.rs  logger.rs  middleware.rs  mod.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  utils.rs  valid.rs  validation.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: mod.rs  prelude.rs  sys_user.rs
src/web/: mod.rs
web/: commitlint.config.ts  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  stylelint.config.js  tsconfig.json  vite.config.ts
web/src/: app.tsx  main.tsx
web/src/apis/: auth.ts  http.ts  index.ts  query.ts  user.ts
web/src/components/: index.ts
web/src/components/config-provider/: config-provider.tsx  css-variables-resolver.ts  index.ts  theme.ts
web/src/components/error/: error.tsx
web/src/components/form/: context.ts  form.ts  index.ts
web/src/components/form/field-components/: date-picker.tsx  index.ts  password-input.tsx  radio-select.tsx  switch.tsx  text-input.tsx
web/src/components/form/form-components/: form.tsx  index.ts  submit-button.tsx
web/src/components/loading-placeholder/: index.ts  loading-placeholder.tsx  props.ts
web/src/components/not-found/: not-found.tsx
web/src/pages/: __root.tsx
web/src/pages/_common/: login.module.css  login.tsx
web/src/pages/_layout/: index.tsx  route.tsx  users.module.css
web/src/router/: index.ts  router.gen.ts
web/src/stores/: app.ts
web/src/styles/: base.css  index.css
