[package]
name = "Axum-pt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
tokio = { version = "1.47.1", features = ['full'] }
tracing = { version = "0.1.41", features = ["async-await"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"]}
config = { version = "0.15.17", features = ["yaml"]}
serde = { version = "1.0.227", features = ["derive"]}
anyhow = "1.0.100"
sea-orm = { version = "1.1.16", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"]}
num_cpus = "1.17.0"
thiserror = "2.0.17"