[package]
name = "Axum_pt"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false

[dependencies]
axum = { version = "0.8.6", features = ["macros"]}
tokio = { version = "1.47.1", features = ['full'] }
tracing = { version = "0.1.41", features = ["async-await"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"]}
config = { version = "0.15.17", features = ["yaml"]}
serde = { version = "1.0.227", features = ["derive"]}
anyhow = "1.0.100"
sea-orm = { version = "1.1.16", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"]}
num_cpus = "1.17.0"
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["trace", "timeout", "cors", "limit", "normalize-path", "auth", "compression-full"]}
xid = "1.1.1"
bytesize = "2.1.0"
validator = { version = "0.20.0", features = ["derive"]}
axum-valid = { version = "0.24.0", features = ["full_validator"]}
regex = "1.11.3"
idgenerator = "2.0.0"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
rust-embed = { version = "8.7.2", features = ["axum", "axum-ex", "tokio", "compression", "debug-embed", "include-exclude", "include-flate", "interpolate-folder-path", "mime-guess"]}